// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros 1. macros: 1. macros 1`] = `
"
import bundle from '@deaven/ast-bundle.macro'

async function sleep(timeout: number) {
  await new Promise(resolve => setTimeout(resolve, timeout));
}

bundle(sleep)

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

({
  \\"name\\": \\"sleep\\",
  \\"source\\": \\"async function sleep(timeout: number) {\\\\n  await new Promise(resolve => setTimeout(resolve, timeout));\\\\n}\\",
  \\"compiled\\": \\"async function sleep(timeout) {\\\\n    await new Promise(resolve => setTimeout(resolve, timeout));\\\\n}\\\\n//# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJmaWxlIjoiaW5kZXguanMiLCJzb3VyY2VSb290IjoiIiwic291cmNlcyI6WyJpbmRleC50cyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQSxLQUFLLFVBQVUsS0FBSyxDQUFDLE9BQWU7SUFDbEMsTUFBTSxJQUFJLE9BQU8sQ0FBQyxPQUFPLENBQUMsRUFBRSxDQUFDLFVBQVUsQ0FBQyxPQUFPLEVBQUUsT0FBTyxDQUFDLENBQUMsQ0FBQztBQUM3RCxDQUFDIn0=\\",
  \\"declarationMap\\": \\"{\\\\\\"version\\\\\\":3,\\\\\\"file\\\\\\":\\\\\\"index.d.ts\\\\\\",\\\\\\"sourceRoot\\\\\\":\\\\\\"\\\\\\",\\\\\\"sources\\\\\\":[\\\\\\"index.ts\\\\\\"],\\\\\\"names\\\\\\":[],\\\\\\"mappings\\\\\\":\\\\\\"AAAA,iBAAe,KAAK,CAAC,OAAO,EAAE,MAAM,iBAEnC\\\\\\"}\\",
  \\"declaration\\": \\"declare function sleep(timeout: number): Promise<void>;\\\\n//# sourceMappingURL=index.d.ts.map\\"
});
"
`;

exports[`macros 2. macros: 2. macros 1`] = `
"
import astBundle from \\"@deaven/ast-bundle.macro\\";
import { ConsoleLog } from \\"./ConsoleLog\\";
import { Tuple } from \\"@deaven/react-atoms.core\\";

async function sleep(timeout: number) {
  await new Promise(resolve => setTimeout(resolve, timeout));
}

export default function Project() {
  return Tuple(
    ConsoleLog({ message: \\"Title 1\\" }),
    ConsoleLog({ message: \\"Hello World 15\\" }),
    ConsoleLog({ message: astBundle(sleep) })
  );
}

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = Project;

var _ConsoleLog = require(\\"./ConsoleLog\\");

var _reactAtoms = require(\\"@deaven/react-atoms.core\\");

function Project() {
  return (0, _reactAtoms.Tuple)((0, _ConsoleLog.ConsoleLog)({
    message: \\"Title 1\\"
  }), (0, _ConsoleLog.ConsoleLog)({
    message: \\"Hello World 15\\"
  }), (0, _ConsoleLog.ConsoleLog)({
    message: {
      \\"name\\": \\"sleep\\",
      \\"source\\": \\"async function sleep(timeout: number) {\\\\n  await new Promise(resolve => setTimeout(resolve, timeout));\\\\n}\\",
      \\"compiled\\": \\"async function sleep(timeout) {\\\\n    await new Promise(resolve => setTimeout(resolve, timeout));\\\\n}\\\\n//# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJmaWxlIjoiaW5kZXguanMiLCJzb3VyY2VSb290IjoiIiwic291cmNlcyI6WyJpbmRleC50cyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQSxLQUFLLFVBQVUsS0FBSyxDQUFDLE9BQWU7SUFDbEMsTUFBTSxJQUFJLE9BQU8sQ0FBQyxPQUFPLENBQUMsRUFBRSxDQUFDLFVBQVUsQ0FBQyxPQUFPLEVBQUUsT0FBTyxDQUFDLENBQUMsQ0FBQztBQUM3RCxDQUFDIn0=\\",
      \\"declarationMap\\": \\"{\\\\\\"version\\\\\\":3,\\\\\\"file\\\\\\":\\\\\\"index.d.ts\\\\\\",\\\\\\"sourceRoot\\\\\\":\\\\\\"\\\\\\",\\\\\\"sources\\\\\\":[\\\\\\"index.ts\\\\\\"],\\\\\\"names\\\\\\":[],\\\\\\"mappings\\\\\\":\\\\\\"AAAA,iBAAe,KAAK,CAAC,OAAO,EAAE,MAAM,iBAEnC\\\\\\"}\\",
      \\"declaration\\": \\"declare function sleep(timeout: number): Promise<void>;\\\\n//# sourceMappingURL=index.d.ts.map\\"
    }
  }));
}
"
`;

exports[`macros 3. macros: 3. macros 1`] = `
"
import bundle from '@deaven/ast-bundle.macro'

async function sleep(timeout: number) {
  await new Promise(resolve => setTimeout(resolve, timeout));
}

bundle(sleep, {export: true})

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

({
  \\"name\\": \\"sleep\\",
  \\"source\\": \\"export async function sleep(timeout: number) {\\\\n  await new Promise(resolve => setTimeout(resolve, timeout));\\\\n}\\",
  \\"compiled\\": \\"\\\\\\"use strict\\\\\\";\\\\nObject.defineProperty(exports, \\\\\\"__esModule\\\\\\", { value: true });\\\\nasync function sleep(timeout) {\\\\n    await new Promise(resolve => setTimeout(resolve, timeout));\\\\n}\\\\nexports.sleep = sleep;\\\\n//# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJmaWxlIjoiaW5kZXguanMiLCJzb3VyY2VSb290IjoiIiwic291cmNlcyI6WyJpbmRleC50cyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiOztBQUFPLEtBQUssVUFBVSxLQUFLLENBQUMsT0FBZTtJQUN6QyxNQUFNLElBQUksT0FBTyxDQUFDLE9BQU8sQ0FBQyxFQUFFLENBQUMsVUFBVSxDQUFDLE9BQU8sRUFBRSxPQUFPLENBQUMsQ0FBQyxDQUFDO0FBQzdELENBQUM7QUFGRCxzQkFFQyJ9\\",
  \\"declarationMap\\": \\"{\\\\\\"version\\\\\\":3,\\\\\\"file\\\\\\":\\\\\\"index.d.ts\\\\\\",\\\\\\"sourceRoot\\\\\\":\\\\\\"\\\\\\",\\\\\\"sources\\\\\\":[\\\\\\"index.ts\\\\\\"],\\\\\\"names\\\\\\":[],\\\\\\"mappings\\\\\\":\\\\\\"AAAA,wBAAsB,KAAK,CAAC,OAAO,EAAE,MAAM,iBAE1C\\\\\\"}\\",
  \\"declaration\\": \\"export declare function sleep(timeout: number): Promise<void>;\\\\n//# sourceMappingURL=index.d.ts.map\\"
});
"
`;

exports[`macros 4. macros: 4. macros 1`] = `
"
import bundle from '@deaven/ast-bundle.macro'

const unsafeCast = <T>(obj: any) => {
  return (obj as any) as T;
}

bundle(unsafeCast, { export: true })

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

({
  \\"name\\": \\"unsafeCast\\",
  \\"source\\": \\"export const unsafeCast = <T>(obj: any) => {\\\\n  return ((obj as any) as T);\\\\n};\\",
  \\"compiled\\": \\"\\\\\\"use strict\\\\\\";\\\\nObject.defineProperty(exports, \\\\\\"__esModule\\\\\\", { value: true });\\\\nexports.unsafeCast = (obj) => {\\\\n    return obj;\\\\n};\\\\n//# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJmaWxlIjoiaW5kZXguanMiLCJzb3VyY2VSb290IjoiIiwic291cmNlcyI6WyJpbmRleC50cyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiOztBQUFhLFFBQUEsVUFBVSxHQUFHLENBQUksR0FBUSxFQUFFLEVBQUU7SUFDeEMsT0FBUyxHQUFpQixDQUFDO0FBQzdCLENBQUMsQ0FBQyJ9\\",
  \\"declarationMap\\": \\"{\\\\\\"version\\\\\\":3,\\\\\\"file\\\\\\":\\\\\\"index.d.ts\\\\\\",\\\\\\"sourceRoot\\\\\\":\\\\\\"\\\\\\",\\\\\\"sources\\\\\\":[\\\\\\"index.ts\\\\\\"],\\\\\\"names\\\\\\":[],\\\\\\"mappings\\\\\\":\\\\\\"AAAA,eAAO,MAAM,UAAU,oBAEtB,CAAC\\\\\\"}\\",
  \\"declaration\\": \\"export declare const unsafeCast: <T>(obj: any) => T;\\\\n//# sourceMappingURL=index.d.ts.map\\"
});
"
`;

exports[`macros 5. macros: 5. macros 1`] = `
"
import bundle from '@deaven/ast-bundle.macro'

export const _ = <T>(arg: T) => arg;
export const __ = _;

bundle([_, __], { export: true })

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

({
  \\"source\\": \\"export const _ = <T>(arg: T) => arg;\\\\nexport const __ = _;\\",
  \\"compiled\\": \\"\\\\\\"use strict\\\\\\";\\\\nObject.defineProperty(exports, \\\\\\"__esModule\\\\\\", { value: true });\\\\nexports._ = (arg) => arg;\\\\nexports.__ = exports._;\\\\n//# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJmaWxlIjoiaW5kZXguanMiLCJzb3VyY2VSb290IjoiIiwic291cmNlcyI6WyJpbmRleC50cyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiOztBQUFhLFFBQUEsQ0FBQyxHQUFHLENBQUksR0FBTSxFQUFFLEVBQUUsQ0FBQyxHQUFHLENBQUM7QUFDdkIsUUFBQSxFQUFFLEdBQUcsU0FBQyxDQUFDIn0=\\",
  \\"declarationMap\\": \\"{\\\\\\"version\\\\\\":3,\\\\\\"file\\\\\\":\\\\\\"index.d.ts\\\\\\",\\\\\\"sourceRoot\\\\\\":\\\\\\"\\\\\\",\\\\\\"sources\\\\\\":[\\\\\\"index.ts\\\\\\"],\\\\\\"names\\\\\\":[],\\\\\\"mappings\\\\\\":\\\\\\"AAAA,eAAO,MAAM,CAAC,kBAAqB,CAAC;AACpC,eAAO,MAAM,EAAE,kBAAI,CAAC\\\\\\"}\\",
  \\"declaration\\": \\"export declare const _: <T>(arg: T) => T;\\\\nexport declare const __: <T>(arg: T) => T;\\\\n//# sourceMappingURL=index.d.ts.map\\"
});
"
`;
